docs: add list openings documentation
